macro(AddTest test_file)
  get_filename_component(test_name ${test_file} NAME_WLE)
  add_executable(${test_name} ${test_file})
  target_link_libraries(${test_name} GTest::GTest ${libraries})
  add_test(NAME ${test_name} COMMAND ${test_name})
endmacro()

if(BuildTests)
set(libraries audio)
AddTest(test_interface.cpp)
endif()